[gd_scene load_steps=4 format=3 uid="uid://c0v21kga7nx4u"]

[ext_resource type="Script" path="res://Scripts/AimTut.gd" id="1_qde3g"]
[ext_resource type="Texture2D" uid="uid://scsjh2xl30wi" path="res://icon.svg" id="2_1gayx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1lah"]
size = Vector2(113, 20)

[node name="AimTut" type="Node2D"]
top_level = true
position = Vector2(0, 35.71)
script = ExtResource("1_qde3g")

[node name="AimArea" type="Area2D" parent="."]
top_level = true
position = Vector2(-84, 423.14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimArea"]
shape = SubResource("RectangleShape2D_q1lah")

[node name="TextureRect" type="TextureRect" parent="AimArea"]
self_modulate = Color(0, 0, 0, 0.423529)
offset_left = -55.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 11.0
texture = ExtResource("2_1gayx")
expand_mode = 1

[node name="AimArea2" type="Area2D" parent="."]
top_level = true
position = Vector2(-84, 655.18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimArea2"]
shape = SubResource("RectangleShape2D_q1lah")

[node name="TextureRect" type="TextureRect" parent="AimArea2"]
self_modulate = Color(0, 0, 0, 0.423529)
offset_left = -55.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 11.0
texture = ExtResource("2_1gayx")
expand_mode = 1

[node name="AimArea3" type="Area2D" parent="."]
top_level = true
position = Vector2(79.69, 537.14)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimArea3"]
shape = SubResource("RectangleShape2D_q1lah")

[node name="TextureRect" type="TextureRect" parent="AimArea3"]
self_modulate = Color(0, 0, 0, 0.423529)
offset_left = -55.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 11.0
texture = ExtResource("2_1gayx")
expand_mode = 1

[node name="AimArea4" type="Area2D" parent="."]
top_level = true
position = Vector2(-275, 537.14)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimArea4"]
shape = SubResource("RectangleShape2D_q1lah")

[node name="TextureRect" type="TextureRect" parent="AimArea4"]
self_modulate = Color(0, 0, 0, 0.423529)
offset_left = -55.0
offset_top = -11.0
offset_right = 55.0
offset_bottom = 11.0
texture = ExtResource("2_1gayx")
expand_mode = 1

[node name="laberl" type="Label" parent="."]
offset_left = -228.0
offset_top = 562.29
offset_right = 29.0
offset_bottom = 585.29
text = "Move your mouse over the boxes"

[connection signal="mouse_entered" from="AimArea" to="." method="_on_aim_area_mouse_entered"]
[connection signal="mouse_entered" from="AimArea2" to="." method="_on_aim_area_2_mouse_entered"]
[connection signal="mouse_entered" from="AimArea3" to="." method="_on_aim_area_3_mouse_entered"]
[connection signal="mouse_entered" from="AimArea4" to="." method="_on_aim_area_4_mouse_entered"]
